--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 /* *======= Google Fonts =======* */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap&family=Roboto:wght@200;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap&family=Roboto:wght@400;700&display=swap");
 
 /* *======= VARIABEL =======* */
 :root {
@@ -41,12 +41,12 @@ ul {
 }
 
 a {
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 img {
   display: block;
-  width: 100%;
+  /* width: 100%; */
 }
 
 h1,
@@ -76,11 +76,11 @@ h4 {
 .swiper {
   width: 100%;
   height: 100%;
-  background-image: url("/public/assets/images/bg.jpg");
+  /* background-image: url("/public/assets/images/bg.jpg"); */
 }
 
 .swiper-button-next {
-  background-image: url("/public/assets/images/kanan.svg");
+  /* background-image: url("/public/assets/images/kanan.svg"); */
   background-repeat: no-repeat;
   height: 16px;
   width: 16px;
