--- a/src/index.css
+++ b/src/index.css
@@ -69,31 +69,16 @@ h4 {
   font-size: 0.875rem;
 }
 
-.heading-text {
-  font-family: var(--ff-primary);
-}
-
+/* !::: SWIPER CSS DEFAULT */
 .swiper {
   width: 100%;
-  height: 100%;
-  /* background-image: url("/public/assets/images/bg.jpg"); */
-}
-
-.swiper-button-next {
-  /* background-image: url("/public/assets/images/kanan.svg"); */
-  background-repeat: no-repeat;
-  height: 16px;
-  width: 16px;
-}
-.swiper-button-next::after {
-  content: "";
-  display: none;
+  height: 100vh;
 }
 
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: transparent;
+  /* background: #fff; */
 
   /* Center slide text vertically */
   display: -webkit-box;
@@ -116,3 +101,24 @@ h4 {
   height: 100%;
   object-fit: cover;
 }
+
+.swiper {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* !::: CUSTOM */
+.heading-text {
+  font-family: var(--ff-primary);
+}
+
+/* .swiper-button-next {
+  background-image: url("/public/assets/images/kanan.svg");
+  background-repeat: no-repeat;
+  height: 16px;
+  width: 16px;
+}
+.swiper-button-next::after {
+  content: "";
+  display: none;
+} */
