--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,14 @@ body {
   font-size: 0.875rem;
 }
 
+a,
+h1,
+h2,
+h3,
+h4 {
+  font-family: var(--ff-primary);
+}
+
 ul {
   list-style: none;
 }
@@ -110,6 +118,10 @@ h4 {
 /* !::: CUSTOM */
 .heading-text {
   font-family: var(--ff-primary);
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #eb1d36 !important;
 }
 
 /* .swiper-button-next {
