--- a/src/index.css
+++ b/src/index.css
@@ -36,13 +36,13 @@ body {
   font-size: 0.875rem;
 }
 
-/* a,
+a,
 h1,
 h2,
 h3,
 h4 {
   font-family: var(--ff-primary);
-} */
+}
 
 ul {
   list-style: none;
@@ -80,7 +80,7 @@ h4 {
 /* !::: SWIPER CSS DEFAULT */
 .swiper {
   width: 100%;
-  height: 90vh;
+  height: 100vh;
 }
 
 .swiper-slide {
@@ -116,10 +116,6 @@ h4 {
 }
 
 /* !::: CUSTOM */
-.heading-text {
-  font-family: var(--ff-primary);
-}
-
 .swiper-pagination-bullet-active {
   background-color: #eb1d36 !important;
 }
