--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ a {
 
 img {
   display: block;
-  /* width: 100%; */
+  width: 100%;
 }
 
 h1,
@@ -65,22 +65,76 @@ h4 {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 3rem !important;
 }
 h2 {
-  font-size: 2rem;
+  font-size: 2rem !important;
 }
 h3 {
-  font-size: 1.25rem;
+  font-size: 1.25rem !important;
 }
 h4 {
-  font-size: 0.875rem;
+  font-size: 0.875rem !important;
+}
+
+@media (max-width: 800px) {
+  body {
+    font-size: 0.75rem !important;
+  }
+
+  h1 {
+    font-size: 2.5rem !important;
+  }
+  h2 {
+    font-size: 1.75rem !important;
+  }
+  h3 {
+    font-size: 1rem !important;
+  }
+  h4 {
+    font-size: 0.75rem !important;
+  }
+}
+
+@media (max-width: 500px) {
+  .container {
+    width: 90vw;
+  }
+
+  body {
+    font-size: 0.5rem !important;
+  }
+
+  h1 {
+    font-size: 2rem !important;
+  }
+  h2 {
+    font-size: 1.25rem !important;
+  }
+  h3 {
+    font-size: 0.875rem !important;
+  }
+  h4 {
+    font-size: 0.5rem !important;
+  }
 }
 
 /* !::: SWIPER CSS DEFAULT */
 .swiper {
   width: 100%;
   height: 100vh;
+}
+
+.swiper.isXL {
+  height: 70vh;
+}
+
+.swiper.isMD {
+  height: 50vh;
+}
+
+.swiper.isSM {
+  height: 30vh;
 }
 
 .swiper-slide {
