--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 /* *======= Google Fonts =======* */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap&family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap");
 
 /* *======= VARIABEL =======* */
 :root {
